[package]
name = "lims-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rusqlite = "0.29.0"
log = "0.4"
env_logger = "0.9"
csv = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
serde_json = "1.0.100"
